# env

./: .luarc.json  README.md
_upkg/: depends  depends.ini  install  install_fonts.sh  noinstall  update  upkg.sh
src/: bashrc  pyproject.toml
src/custom/: myi3.desktop
src/dotfiles/: Xmodmap  Xresources  alsoftrc  bashrc  ctags  eslintrc  eslintrc.js  gitconfig  gitignore_global  i3status.conf  jshintrc  luacheckrc  npmrc  psqlrc  pythonrc.py  shell_commonrc  typos.toml  xinitrc  xsession  zpreztorc  zprofile  zshenv  zshrc
src/dotfiles/config/: .flake8  compton-ephi.conf  compton-leaf.conf  compton-lola.conf  compton-timehook.conf  compton.conf  picom-ephi.conf  picom-rose.conf  picom.conf  pycodestyle  pylintrc  starship.toml  yakuake.notifyrc  yakuakerc
src/dotfiles/config/PulseEffects/: 0 Monitor.json  1 BassEnhancer.json  2 BassEnhancedAndUp.json  2 PEQ.json  3 BassEnhanced + PEQ.json  4 Bass Enhancing + Perfect EQ.json  BaseEnhancer.preset  BassUpEnhanced.preset  BigBottom-AutoVol.preset  BigBottom-StaticGain.preset  JustVoice.preset
src/dotfiles/config/alacritty/: alacritty.toml  alacritty.yml
src/dotfiles/config/deadbeef/: config  dspconfig
src/dotfiles/config/deadbeef/playlists/: 1.dbpl  2.dbpl  radio.dbpl
src/dotfiles/config/gh/: config.yml  hosts.yml
src/dotfiles/config/htop/: htoprc
src/dotfiles/config/hypr/: hyprland.conf  keybinds.conf  startup.conf
src/dotfiles/config/i3/: PV-LT-002-config  chainbook-config  chica-config  config  dvj-bst-dev-0011-buttars-config  ephi-config  lola-config  lola-ws-layout-10.json  music-layout-4.json  rose-config  theme-latte-config  theme-solarized-config
src/dotfiles/config/i3blocks/: config
src/dotfiles/config/i3blocks/backlight/: backlight.sh
src/dotfiles/config/i3blocks/battery/: battery_info.sh
src/dotfiles/config/i3blocks/cpu/: cpu_info.sh  freq.sh
src/dotfiles/config/i3blocks/memory/: mem_bars.sh
src/dotfiles/config/i3blocks/sound/: volume.sh
src/dotfiles/config/i3blocks/temp/: cpu_temp.sh
src/dotfiles/config/i3status/: config
src/dotfiles/config/kitty/: cached.json  kitty.conf  theme-dark.conf  theme-red.conf
src/dotfiles/config/lazygit/: config.yml
src/dotfiles/config/neovide/: config.toml
src/dotfiles/config/nvim/: coc-settings.json
src/dotfiles/config/polybar/: bars.ini  colors-solarized-light.ini  colors-solarized.ini  colors.ini  config  config.ini  latte.ini  launch.sh  modules.ini
src/dotfiles/config/polybar/base/: bars.ini  colors-solarized-light.ini  colors-solarized.ini  config  config.ini  modules.ini  solarized-palette.ini
src/dotfiles/config/polybar/machines/chica/: config
src/dotfiles/config/polybar/machines/default/: config
src/dotfiles/config/polybar/machines/ephi/: config
src/dotfiles/config/polybar/scripts/: cpufreq.sh
src/dotfiles/config/systemd/user/: git-maintenance@.service  git-maintenance@.timer  plasma-i3-wm.service
src/dotfiles/config/systemd/user/multi-user.target.wants/: torrents-for-transmission.path  torrents-for-transmission.service
src/dotfiles/config/systemd/user/plasma-workspace.target.wants/: plasma-i3-wm.service
src/dotfiles/config/systemd/user/timers.target.wants/: git-maintenance@weekly.timer
src/dotfiles/config/wezterm/: wezterm.lua  wezterm.lua.orig
src/dotfiles/i3/: base-config  chainbook-config  chica-config  ephi-config  genconfig.sh  leaf-config  lola-config  lola-ws-layout-7.json  music-layout-4.json  puffsub-config  rose-config  timehook-config  timehook-ws-layout-10.json  timehook-ws-layout-7.json
src/dotfiles/ipython/profile_default/: ipython_config.py
src/dotfiles/local/share/applications/: kitty-dark.desktop  kitty-light.desktop
src/dotfiles/local/share/konsole/:  .profile  .profile  Light.profile  Rey.profile  Shell.profile  Solarized Light.colorscheme  Solarized.profile  SolarizedLight.colorscheme  bookmarks.xml  dark.profile  default.keytab  konsoleui.rc  light.profile  macchiato.profile  red.profile  rose-pine-dawn.colorscheme
src/dotfiles/oldconfig/PulseEffects/: 0 Monitor.json  0 Monitor.preset  BassUpEnhanced.preset
src/dotfiles/oldlocal/share/konsole/: Light.profile  Solarized Dark.colorscheme  Solarized Light.colorscheme
src/dotfiles/shell.d/: README.md  index
src/dotfiles/shell.d/bash/: 10starship.sh  30fzf.sh  80python.sh
src/dotfiles/shell.d/common/: 00base.sh  0base.sh  10alias.sh  10path.sh  40git.sh  50python.sh  60neovide.sh  70nvm.sh  90fzf_fasd.sh  fzf.sh  fzf_fasd.sh  node.sh  nvm.sh  python.sh
src/dotfiles/shell.d/zsh/: 10-powerline.zsh  10starship.zsh  20-prezto.zsh  80python.zsh  81poetry_completion.zsh  90-fzf_fasd.zsh  90-zshrc.zsh  91-jujutsu.zsh  99-fzf.zsh  99-fzf_fasd.zsh  python.zsh
src/dotfiles/ssh/: config
src/dotfiles/zfunc/: _poetry
src/ssh/: config
src/systemd/: ephi-reverse-ssh.service
