[tool.poetry]
name = "jeff.buttars"
version = "0.1.0"
description = ""
authors = ["Jeff Buttars <jeffbuttars@gmail.com>"]

[tool.poetry.dependencies]
Cython = ">=0.29.24"
assertpy = ">=1.1"
cachetools = ">=4.2.1"
cytoolz = ">=0.11.0"
geographiclib = ">=1.52"
gunicorn = ">=20.1.0"
httpx = ">=0.22.0"
immutables = ">=0.15"
inotify = ">=0.2.10"
matplotlib = ">=3.5.3"
mkdocs = ">=1.1.2"
mkdocs-material = ">=6.1.0"
mkdocs-pdf-export-plugin = ">=0.5.8"
mkdocs-with-pdf = ">=0.8.0"
mkpdfs-mkdocs = ">=1.0.1"
orjson = ">=3.8.0"
pydantic = {extras = ["email", "dotenv"], version = ">=1.9.1"}
pyproj = ">=3.2.1"
python = ">=3.8,<3.11"
qrcode = {extras = ["all"], version = ">=7.3.1"}
randomname = ">=0.1.5"
types-cachetools = ">=5.2.1"
typesystem = ">0.3"
watchgod = ">=0.6"
websockets = ">=10.3"
yoyo-migrations = ">=7.2.1"

[tool.poetry.dev-dependencies]
data-science-types = ">=0.2.23"
bandit = "*"
black = "*"
devtools = ">=0.8.0"
flake8 = "*"
flake8-bugbear = "*"
grip = ">=4.5.2"
isort = "*"
jedi = ">=0.18.0"
Markdown = ">=3.3.4"
mypy = "*"
mypy-ls = ">=0.5.1"
pyfakefs = "*"
pyls-black = ">=0.4.6"
pyls-flake8 = ">=0.4.0"
pyls-isort = ">=0.2.2"
pyls-memestra = ">=0.0.15"
pylsp-rope = ">=0.1.9"
pytest-html = ">=3.1.1"
pynvim = "*"
python-lsp-black = ">=1.0.0"
python-lsp-server = {extras = ["all"], version = "*"}
rope = ">=1.2.0"
ssort = ">=0.10.1"
types-orjson = ">=0.1.1"
ruff = ">=0.0.37"
python-lsp-autoimport = ">=0.0.1"
pylsp-mypy = ">=0.6.2"
types-ujson = ">=5.5.0"

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99

[tool.pycodestyle]
max-line-length = 99

[tool.isort]
profile = "black"
lines_between_types = 1
combine_as_imports = true
line_length = 99

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "99"

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
