[tool.poetry]
name = "jeff.buttars"
version = "1.0.0"
description = ""
authors = ["Jeff Buttars <jeffbuttars@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
cachetools = ">=4.2.1"
Cython = ">=0.29.24"
cytoolz = ">=0.11.0"
geographiclib = ">=1.52"
gunicorn = ">=20.1.0"
httpx = ">=0.22.0"
immutables = ">=0.15"
inotify = ">=0.2.10"
Markdown = ">=3.3.4"
mkdocs-pdf-export-plugin = ">=0.5.8"
mkdocs-with-pdf = ">=0.8.0"
mkpdfs-mkdocs = ">=1.0.1"
nodeenv = ">=1.7.0"
orjson = ">=3.8.0"
pip-licenses = ">=4.0.1"
pycmarkgfm = ">=1.2.0"
pydantic = {extras = ["email", "dotenv"], version = ">=1.9.1"}
pyfakefs = "*"
pyproj = ">=3.2.1"
python = ">=3.12,<3.13"
typesystem = ">0.3"
websockets = ">=10.3"
uuid7 = "^0.1.0"
matplotlib = "^3.8.0"
update = "^0.0.1"
pytesseract = "^0.3.10"
imutils = "^0.5.4"
plantuml = "^0.3.0"
ptpython = "^3.0.23"
openai = "^0.28.1"
pillow = "^10.1.0"
fleet-context = "^1.0.12"
milc = "^1.6.8"
hjson = "^3.1.0"
dotty-dict = "^1.3.1"
usb = "^0.0.83.dev0"
shapely = "^2.0.3"
dpath = "^2.1.6"
psutil = "^5.9.8"
simplekml = "^1.3.6"
pyqt5-sip = "^12.13.0"
pyqt5-qt5 = "5.15.2"
procfs = "^0.5.0"
pyqt5 = "^5.15.10"
pandas = "^2.2.1"
mkdocs = "^1.6.0"
setuptools = "^75.2.0"

[tool.poetry.group.dev.dependencies]
assertpy = ">=1.1"
black = "*"
data-science-types = ">=0.2.23"
devtools = ">=0.8.0"
flake8 = "*"
flake8-bugbear = "*"
grip = ">=4.5.2"
isort = "*"
jedi = ">=0.18.0"
jedi-language-server = ">=0.40.0"
mypy = "*"
mypy-ls = ">=0.5.1"
pynvim = "*"
pytest-html = ">=3.1.1"
python-lsp-autoimport = ">=0.0.1"
python-lsp-black = ">=1.0.0"
python-lsp-server = {extras = ["all"], version = "*"}
ruff = "*"
ssort = ">=0.10.1"
types-cachetools = ">=5.2.1"
types-orjson = ">=0.1.1"
types-ujson = ">=5.5.0"
typesystem = ">0.3"
websockets = ">=10.3"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}

[tool.black]
line-length = 99

[tool.ruff]
target-version = "py312"
line-length = 99
ignore-init-module-imports = true

# pyflakes, pycodestyle, isort
# select = ["F", "E", "W", "I001", "I002"]

# Isort and mccabe
select = ["I001", "I002", "C901", "F"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
fixable = ["ALL"]

# F401: Report unused-imports, but don't fix them for me.
# F841: Report unused-variables, but don't fix them for me.
unfixable = ["F401", "F841"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pycodestyle]
max-line-length = 99

[tool.isort]
profile = "black"
lines_between_types = 1
combine_as_imports = true
line_length = 99

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# [tool.pylint.messages_control]
# disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "99"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "avapi.settings"
# You can either specify django_settings_module as seen above, or let django_stubs use the DJANGO_SETTINGS_MODULE variable from your environment.

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.typos.default.extend-words]
hae = "hae"

[tool.pyright]
pythonVersion = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
